; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outRelabelType.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_outfuncs.c__outRelabelType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"RELABELTYPE\00", align 1
@arg = common dso_local global i32 0, align 4
@resulttype = common dso_local global i32 0, align 4
@resulttypmod = common dso_local global i32 0, align 4
@resultcollid = common dso_local global i32 0, align 4
@relabelformat = common dso_local global i32 0, align 4
@CoercionForm = common dso_local global i32 0, align 4
@location = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @_outRelabelType to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_outRelabelType(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = call i32 @WRITE_NODE_TYPE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @arg, align 4
  %7 = call i32 @WRITE_NODE_FIELD(i32 %6)
  %8 = load i32, i32* @resulttype, align 4
  %9 = call i32 @WRITE_OID_FIELD(i32 %8)
  %10 = load i32, i32* @resulttypmod, align 4
  %11 = call i32 @WRITE_INT_FIELD(i32 %10)
  %12 = load i32, i32* @resultcollid, align 4
  %13 = call i32 @WRITE_OID_FIELD(i32 %12)
  %14 = load i32, i32* @relabelformat, align 4
  %15 = load i32, i32* @CoercionForm, align 4
  %16 = call i32 @WRITE_ENUM_FIELD(i32 %14, i32 %15)
  %17 = load i32, i32* @location, align 4
  %18 = call i32 @WRITE_LOCATION_FIELD(i32 %17)
  ret void
}

declare dso_local i32 @WRITE_NODE_TYPE(i8*) #1

declare dso_local i32 @WRITE_NODE_FIELD(i32) #1

declare dso_local i32 @WRITE_OID_FIELD(i32) #1

declare dso_local i32 @WRITE_INT_FIELD(i32) #1

declare dso_local i32 @WRITE_ENUM_FIELD(i32, i32) #1

declare dso_local i32 @WRITE_LOCATION_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
